# nhkRadio

./: .gitignore  .nhk-radio-write-test-1775519846648.tmp  README.md  config.yaml.example  pyproject.toml
.github/workflows/: data-update.yml  deploy-pages.yml  record.yml
data/: programs-2026-04-05.json  programs-2026-04-06.json  programs-2026-04-07.json  programs-2026-04-08.json  programs-2026-04-09.json  programs-2026-04-10.json  programs-2026-04-11.json  programs-2026-04-12.json  programs-2026-04-13.json  programs-2026-04-14.json  programs-2026-04-16.json  programs-2026-04-17.json  programs-2026-04-18.json  programs-latest.json  series.json  subscriptions.example.json  subscriptions.json
docs/: radiko-vpn-setup.md  saas-migration.md
nhk_recorder/: api.py  config.py  data_export.py  main.py  matcher.py  notion.py  radiko.py  recorder.py  scheduler.py  streams.py  vpn_manager.py  vpngate.py
tests/: test_api.py  test_matcher.py
web/: package-lock.json  package.json  svelte.config.js
web/src/: app.css  app.html
web/src/lib/: github.ts  time.ts  types.ts
web/src/lib/components/: GitHubConfigModal.svelte  SeriesCard.svelte
web/src/lib/stores/: githubConfig.ts  subscriptions.ts
web/src/routes/: +layout.svelte  +layout.ts  +page.svelte
web/static/data/: programs-2026-04-05.json  programs-2026-04-08.json  programs-2026-04-09.json  programs-2026-04-10.json  programs-2026-04-11.json  programs-2026-04-12.json  programs-2026-04-13.json  programs-2026-04-14.json  programs-2026-04-15.json  programs-2026-04-16.json  programs-latest.json  series.json
(+6 files in other folders)
